Add new notes